[gd_scene load_steps=7 format=3 uid="uid://cvd38j5wrip7n"]

[ext_resource type="PackedScene" uid="uid://4dibqrmicnp" path="res://scenes/game/ui_utils/go_to_back.tscn" id="1_hkcyk"]
[ext_resource type="Script" path="res://scenes/game/settings_layer.gd" id="1_jp3tu"]
[ext_resource type="PackedScene" uid="uid://dbqb5wiqrmafq" path="res://scenes/game/main_scene.tscn" id="2_w8do5"]
[ext_resource type="PackedScene" uid="uid://cds0dq5tddlky" path="res://ui_utils/audio_controllers/master_slider.tscn" id="4_flf13"]
[ext_resource type="PackedScene" uid="uid://dej0jpt8wbne6" path="res://ui_utils/audio_controllers/music_slider.tscn" id="5_s3lxd"]
[ext_resource type="PackedScene" uid="uid://slevo34hm4ii" path="res://ui_utils/audio_controllers/sfx_slider.tscn" id="6_u6cs5"]

[node name="SettingsLayer" type="CanvasLayer"]
script = ExtResource("1_jp3tu")

[node name="GoToBack" parent="." instance=ExtResource("1_hkcyk")]
offset_left = 64.0
offset_top = 48.0
offset_right = 96.0
offset_bottom = 80.0
scale = Vector2(2, 2)
back_scene = ExtResource("2_w8do5")

[node name="Title" type="Label" parent="."]
offset_left = 192.0
offset_top = 32.0
offset_right = 907.0
offset_bottom = 109.0
theme_type_variation = &"TitleLabel"
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "UI.MAIN_MENU.SETTINGS"

[node name="VideoSubtitle" type="Label" parent="."]
offset_left = 224.0
offset_top = 112.0
offset_right = 638.0
offset_bottom = 171.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "UI.SETTINGS.VIDEO"
horizontal_alignment = 1

[node name="HVideo" type="HBoxContainer" parent="."]
offset_left = 240.0
offset_top = 176.0
offset_right = 912.0
offset_bottom = 309.0
theme_override_constants/separation = 32

[node name="Labels" type="VBoxContainer" parent="HVideo"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="HVideo/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "UI.SETTINGS.VIDEO.FULLSCREEN"

[node name="Label2" type="Label" parent="HVideo/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "UI.SETTINGS.VIDEO.BORDERLESS"

[node name="Label3" type="Label" parent="HVideo/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "UI.SETTINGS.VIDEO.VSYNC"

[node name="CheckBoxs" type="VBoxContainer" parent="HVideo"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Fullscreen" type="CheckBox" parent="HVideo/CheckBoxs"]
layout_mode = 2
size_flags_vertical = 2

[node name="Borderless" type="CheckBox" parent="HVideo/CheckBoxs"]
layout_mode = 2
size_flags_vertical = 2

[node name="VSync" type="CheckBox" parent="HVideo/CheckBoxs"]
layout_mode = 2
size_flags_vertical = 2

[node name="AudioSubtitle" type="Label" parent="."]
offset_left = 224.0
offset_top = 336.0
offset_right = 638.0
offset_bottom = 395.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "UI.SETTINGS.AUDIO"
horizontal_alignment = 1

[node name="HAudio" type="HBoxContainer" parent="."]
offset_left = 240.0
offset_top = 400.0
offset_right = 912.0
offset_bottom = 533.0
theme_override_constants/separation = 32

[node name="Labels" type="VBoxContainer" parent="HAudio"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="HAudio/Labels"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "UI.SETTINGS.AUDIO.MASTER"

[node name="Label2" type="Label" parent="HAudio/Labels"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "UI.SETTINGS.AUDIO.MUSIC"

[node name="Label3" type="Label" parent="HAudio/Labels"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "UI.SETTINGS.AUDIO.SFX"

[node name="Sliders" type="VBoxContainer" parent="HAudio"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="MasterSlider" parent="HAudio/Sliders" instance=ExtResource("4_flf13")]
layout_mode = 2

[node name="MusicSlider" parent="HAudio/Sliders" instance=ExtResource("5_s3lxd")]
layout_mode = 2

[node name="SfxSlider" parent="HAudio/Sliders" instance=ExtResource("6_u6cs5")]
layout_mode = 2

[node name="LanguageSubtitle" type="Label" parent="."]
offset_left = 224.0
offset_top = 560.0
offset_right = 730.0
offset_bottom = 619.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "UI.SETTINGS.LANGUAGE"
horizontal_alignment = 1

[node name="Change" type="Label" parent="."]
offset_left = 240.0
offset_top = 623.0
offset_right = 711.0
offset_bottom = 662.0
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "UI.SETTINGS.LANGUAGE.CHANGE"

[node name="LanguageSelector" type="OptionButton" parent="."]
offset_left = 256.0
offset_top = 671.0
offset_right = 640.0
offset_bottom = 717.0
item_count = 2
popup/item_0/text = "UI.SETTINGS.LANGUAGE.ENGLISH"
popup/item_1/text = "UI.SETTINGS.LANGUAGE.SPANISH"
popup/item_1/id = 1

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[connection signal="toggled" from="HVideo/CheckBoxs/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="HVideo/CheckBoxs/Borderless" to="." method="_on_borderless_toggled"]
[connection signal="toggled" from="HVideo/CheckBoxs/VSync" to="." method="_on_v_sync_toggled"]
[connection signal="item_selected" from="LanguageSelector" to="." method="_on_language_selector_item_selected"]
